[package]
name = "cc1101-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radio = "0.11.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
modular-bitfield = "0.11.2"

[dev-dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }

[target.thumbv7m-none-eabi.dev-dependencies.stm32f1xx-hal]
features = ["rt", "stm32f103"]
version = "0.10.0"

[target.thumbv7m-none-eabi.dev-dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[lib]
test = false
bench = false
